--- a/QGL/config.json
+++ b/QGL/config.json
@@ -1,4 +1,4 @@
 {
-	"AWGDir": "/Users/Caleb/Development/pyqlab-config/AWG",
-	"ChannelLibraryFile": "/Users/Caleb/Development/pyqlab-config/Config/ChannelParams.json"
+	"AWGDir": "Z:/Experiments/DR2/pyqlab-config/AWG",
+	"ChannelLibraryFile": "Z:/Experiments/DR2/pyqlab-config/Config/ChannelParams.json"
 }
