--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,14 @@ python:
   - 3.5
 
 before_install:
-  #install git lfs and fetch test data
-  - wget https://github.com/github/git-lfs/releases/download/v1.2.0/git-lfs-linux-amd64-1.2.0.tar.gz
-  - tar xzf git-lfs-linux-amd64-1.2.0.tar.gz
-  - (cd git-lfs-1.2.0 && PREFIX=$HOME/.local ./install.sh)
+  # install git lfs and fetch test data
+  - if [ ! -f $HOME/download/git-lfs-linux-amd64-2.0.2.tar.gz ]; then
+      pushd $HOME/download;
+      wget https://github.com/github/git-lfs/releases/download/v2.0.2/git-lfs-linux-amd64-2.0.2.tar.gz;
+      popd;
+    fi
+  - tar xzf $HOME/download/git-lfs-linux-amd64-2.0.2.tar.gz
+  - (cd git-lfs-2.0.2 && PREFIX=$HOME/.local ./install.sh)
   - export PATH=$HOME/.local/bin:$PATH
   - git lfs pull
 
