--- a/QGL/config.json
+++ b/QGL/config.json
@@ -1,8 +1,7 @@
 {
 	"AWGDir": "Z:/Experiments/DR2/pyqlab-config/AWG",
 	"ChannelLibraryFile": "Z:/Experiments/DR2/pyqlab-config/Config/ChannelParams.json",
-	"PulsePrimitivesLibrary": "standard",
-	"Y_angle": 90,
+	"PulsePrimitivesLibrary": "sfq",
 	"cnot_implementation": "CNOT_CR",
 	"PlotBackground": "#EAEAF2",
 	"GridColor": "white"
